# PythonExtensionDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  module.c  module.cc
boost-python/: .gitignore  CMakeLists.txt  README.md  hello.cc  vcpkg.json
boost-python/triplets/: x64-windows-static-boost.cmake
cpython/: README.md
